cabal-version: 1.12

name:           oi-oi-oi
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cdepillabout/oi-oi-oi#readme>
homepage:       https://github.com/cdepillabout/oi-oi-oi#readme
bug-reports:    https://github.com/cdepillabout/oi-oi-oi/issues
author:         Dennis Gosnell
maintainer:     cdep.illabout@gmail.com
copyright:      2021 Dennis Gosnell
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/cdepillabout/oi-oi-oi

library
  exposed-modules:
      Lib
  other-modules:
      Paths_oi_oi_oi
  hs-source-dirs:
      src
  build-depends:
        base >=4.7 && <5
      , comonad
  ghc-options:
      -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  default-language: Haskell2010

test-suite oi-oi-oi-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_oi_oi_oi
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , oi-oi-oi
  default-language: Haskell2010
